Increase the submenu z-index, fixed #111

--- a/assets/sass/site/header/builder_items/_navigation.scss
+++ b/assets/sass/site/header/builder_items/_navigation.scss
@@ -99,7 +99,7 @@ $submenu_width: 14em;
         position: absolute;
         left: 0px;
         transition: all .3s ease;
-        z-index: 36;
+        z-index: 99; 
         opacity: 0;
         height: 0;
         overflow: hidden;
