--- a/style.css
+++ b/style.css
@@ -3279,7 +3279,7 @@ article.comment .comment-post-author {
   position: absolute;
   left: 0px;
   transition: all .3s ease;
-  z-index: 36;
+  z-index: 99;
   opacity: 0;
   height: 0;
   overflow: hidden;
